--- a/style1.css
+++ b/style1.css
@@ -495,9 +495,11 @@ header.sticky {
 @media (max-width: 1200px){
     header{
         padding: 15px 4%;
+        transition: 0.2s;
     }
     section{
         padding: 150px 4% 120px;
+        transition: 0.2s;
     }
     .Submit{
         font-size: 12px;
@@ -514,9 +516,11 @@ header.sticky {
     .Submit{
         font-size: 12px;
         width: 40%;
+        transition: 0.2s;
     }
     .shashank{
         left: 60px;
+        transition: 0.2s;
     }
 }
 
@@ -526,9 +530,11 @@ header.sticky {
     }
     .portfoliocontent{
         grid-template-columns: repeat(auto-fit, minmax(200px,auto));
+        transition: 0.2s;
     }
     .shashank{
         left: 40px;
+        transition: 0.2s;
     }
     .mai-box h3 {
         font-size: 1.4rem;
@@ -537,6 +543,7 @@ header.sticky {
 @media (max-width: 980px){
     section{
         padding: 100px 4% 100px;
+        transition: 0.2s;
     }
     .mai-box h3 {
         font-size: 1.2rem;
@@ -548,14 +555,17 @@ header.sticky {
     }
     .portfoliocontent{
         grid-template-columns: repeat(3fr,minmax(150px,auto));
+        transition: 0.2s;
     }
     .row{
         height: 230px;
         width: 230px;
+        transition: 0.2s;
     }
     .row img{
         height: 230px;
         width: 230px;
+        transition: 0.2s;
     }
     .row:hover img{
         transform:scale(1.2);
@@ -572,6 +582,7 @@ header.sticky {
         width: 70%;
         position: relative;
         left: 125px;
+        transition: 0.2s;
     }
     .contact-text h2{
         font-size: 2rem;
@@ -675,6 +686,7 @@ header.sticky {
     } */
     section{
         padding: 70px 4% 70px;
+        transition: 0.2s;
     }
     .home h1{
         font-size: 2.5rem;
@@ -700,20 +712,24 @@ header.sticky {
     }
     .service-content {
         left: 110px;
+        transition: 0.2s;
     }
 
     .portfoliocontent{
         grid-template-columns: repeat(3fr ,minmax(200px,auto));
         column-gap: 20px;
         justify-content: center;
+        transition: 0.2s;
     }
     .row{
         height: 200px;
         width: 200px;
+        transition: 0.2s;
     }
     .row img{
         height: 200px;
         width: 200px;
+        transition: 0.2s;
     }
     .contact-text h2{
         font-size: 1.8rem;
@@ -787,19 +803,23 @@ header.sticky {
         grid-template-columns: repeat(2 ,minmax(200px,auto));
         column-gap: 40px;
         justify-content: center;
+        transition: 0.2s;
     }
     .row{
         height: 180px;
         width: 180px;
+        transition: 0.2s;
     }
     .row img{
         height: 180px;
         width: 180px;
+        transition: 0.2s;
     }
     .contactme {
         display: flex;
         flex-direction: column;
         align-items: center;
+        transition: 0.2s;
     }
     .contact-text{
         width:70%;
@@ -807,6 +827,7 @@ header.sticky {
     }
     .contact-form{
         width:70%;
+        transition: 0.2s;
     } 
     .contact-form input,textarea {
         padding: 4px 6px;
@@ -874,19 +895,23 @@ header.sticky {
     .service-content {
         left: 50px;
         width: 80%;
+        transition: 0.2s;
     }
     .portfoliocontent{
         grid-template-columns: repeat(2 ,minmax(160px,auto));
         column-gap: 20px;
         justify-content: space-evenly;
+        transition: 0.2s;
     }
     .row{
         height: 160px;
         width: 160px;
+        transition: 0.2s;
     }
     .row img{
         height: 160px;
         width: 160px;
+        transition: 0.2s;
     }
     .layer{
         padding: 0 20px ;
@@ -911,3 +936,60 @@ header.sticky {
     }
 
 }
+
+@media (max-width:390px ) and (max-height:700px){
+    .home p{
+        margin-bottom: 15px;
+    }
+    .home h1{
+        font-size: 2.2rem;
+    }
+    .home h3{
+        font-size: 1.6rem;
+    }
+    .button p{
+        font-size: 0.7rem;
+        color: #2a2a2a;
+        position: relative;
+        top:6.5px;
+    }
+    .service-content {
+        left: 32px;
+        width: 80%;
+    }
+    .Submit{
+        font-size: 15px;
+        width: 50%;
+    }
+    .about{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        transition: 0.2s;
+    }
+    .firstone{
+        width: 100%;
+        text-align: center;
+        transition: all 0.5s ease;
+    }
+    .shashank{
+        border-radius: 20px;
+        height: 50vh;
+        width: 33vh;
+        transition: all 0.5s ease;
+    }
+    .secondone{
+        width: 80%;
+        transition: all 0.5s ease;
+        /* text-align: center; */
+        position: relative;
+        left: 0;
+    }
+    .secondone p{
+        margin-bottom: 22px;
+    }
+ 
+    
+} 
